# DieNow

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  run.sh
configs/: default.yaml  personas.yaml
docker/: Dockerfile  build.sh  docker-compose.yaml
notes/: time-structure.md
src/ring_of_hands/: __init__.py  cli.py
tests/: __init__.py
tests/cli/: __init__.py  test_cli.py
tests/fixtures/: __init__.py  dry_run.yaml
tests/integration/: __init__.py  test_full_win_path.py  test_ring_paradox_fail_path.py  test_script_generation_failure.py  test_timeout_fail_path.py  test_unreachable_six_lights.py
tests/llm/: __init__.py  test_anthropic_client.py  test_base.py  test_claude_cli_client.py  test_claude_cli_ndjson.py  test_fake_client.py
tests/pov_manager/: __init__.py  conftest.py  test_death_handler.py  test_free_agent_runner.py  test_realtime_chat.py  test_script_executor.py  test_types.py
tests/project_agent/: __init__.py  conftest.py  test_action_parser.py  test_agent.py  test_error_handling.py  test_metrics.py  test_realtime.py
tests/rules_engine/: __init__.py  conftest.py  test_button_rule.py  test_death_rule.py  test_invariants.py  test_move_rule.py  test_outcome.py  test_ring_rule.py  test_speak_rule.py
tests/scenario_runner/: __init__.py  test_config_loader.py  test_runner.py  test_summary.py  test_types.py
tests/script_generator/: __init__.py  test_generator.py  test_prompt_builder.py  test_types.py  test_validator.py
tests/world_model/: __init__.py  test_engine.py  test_event_log.py  test_observation.py  test_types.py
(+77 files in other folders)
